--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "affected": "nx affected",
     "format": "nx format:write --base=main",
     "format:write": "nx format:write",
-    "format:check": "nx format:check",
+    "format:check": "nx format:check --base=main",
     "update": "nx migrate latest",
     "update:check": "ng update",
     "dep-graph": "nx dep-graph",
@@ -38,8 +38,8 @@
     "@angular/platform-browser": "16.1.9",
     "@angular/platform-browser-dynamic": "16.1.9",
     "@angular/router": "16.1.9",
-    "@mikro-orm/core": "^5.7.13",
-    "@mikro-orm/entity-generator": "^5.7.13",
+    "@mikro-orm/core": "5.7.14",
+    "@mikro-orm/entity-generator": "5.7.14",
     "@mikro-orm/migrations": "^5.7.13",
     "@mikro-orm/mysql": "^5.7.13",
     "@mikro-orm/nestjs": "^5.2.0",
